--- a/rspack-ui/Dockerfile
+++ b/rspack-ui/Dockerfile
@@ -18,6 +18,8 @@ RUN npm run build
 # 2. For Nginx setup
 FROM docker.io/library/nginx:alpine
 
+RUN chown -R nginx:nginx /var/cache/nginx /var/run/ 
+
 # Copy config nginx
 COPY --from=build /app/.nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
@@ -30,5 +32,6 @@ RUN rm -rf ./*
 COPY --from=build /app/dist .
 
 USER nginx
+EXPOSE 3000
 # Containers run nginx with global directives and daemon off
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
