--- a/rspack-ui/Dockerfile
+++ b/rspack-ui/Dockerfile
@@ -31,7 +31,7 @@ RUN rm -rf ./*
 # Copy static assets from builder stage
 COPY --from=build /app/dist .
 
-USER nginx
+USER 1000
 EXPOSE 3000
 # Containers run nginx with global directives and daemon off
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
